--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <!-- this is another comment -->
     <div class="container-nav">
       <li><a href="#">home</a></li>
       <li><a href="#">about me</a></li>
@@ -22,6 +23,7 @@
       <div><img src="film2.jpg" alt="" /></div>
       <div><img src="film3.jpg" alt="" /></div>
     </div>
+    <!-- this is the first version -->
     <h1 class="txt">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, sapiente
       tempora! Amet perferendis temporibus eveniet, vero modi nulla itaque aut?
