--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- this is another comment -->
     <div class="container-nav">
-      <li><a href="#">home</a></li>
+      <li><a href="#">Brand</a></li>
       <li><a href="#">about me</a></li>
       <li><a href="#">sample works</a></li>
     </div>
